--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ deploy:
   bucket_path: "docker-react"
   on:
     branch: master
-  access_key_id: $AWS_USER_ACCESS
+  access_key_id: 
+    secure: "$AWS_USER_ACCESS"
   access_secret_key:
     secure: "$AWS_USER_SECRET"
